# Quarter-III

Assignments/Assignment  1/Assignemnt#1/: README.md  pyproject.toml
Assignments/Assignment  1/Assignemnt#1/todos/: main.py
Classes/Class 1 24-03-2024/hello-fastapi/: README.md  pyproject.toml
Classes/Class 1 24-03-2024/hello-fastapi/todos/: main.py
Classes/Class 1 24-03-2024/todolist/: pyproject.toml
Classes/Class 1 24-03-2024/todolist/todolist/: main.py
Classes/Class 2 31-03-2024/class-2/: pyproject.toml
Classes/Class 2 31-03-2024/class-2/todos/: main.py
